=head1 NAME

Changes - History of significant changes in Devel::NYTProf

=cut

=head2 Changes in Devel::NYTProf 5.04 - 20th June 2013

  Allow negative times in tests for systems with unstable clocks
    thanks to Gisle Aas, RT#85556.
  Added libcexit=1 option thanks to Zefram, RT#75912.
  Added documentation for endatexit and libcexit options.
  Added documentation for nytprofhtml --minimal
    thanks to Mike Doherty, RT#86039.

=head2 Changes in Devel::NYTProf 5.03 - 20th May 2013

  Fix windows to use flamegraph.bat [Christian Walde]
  Generates META.yml which mentions github repo [Christian Walde]
  Add meta robots noindex to html pages [Tokuhiro Matsuno]

=head2 Changes in Devel::NYTProf 5.02 - 21st April 2013

  Fix Windows build, properly RT#84738.

=head2 Changes in Devel::NYTProf 5.01 - 19th April 2013

  Fix Windows build RT#84738.

  Can't rely on #!-line to always work, PR#3
    thanks to Gisle Aas.

  Avoid triggering "gcc internal compiler error" PR#4
    thanks to Gisle Aas.

=head2 Changes in Devel::NYTProf 5.00 - 8th April 2013

  Added subroutine entry and return event stream,
    controlled via the calls=N option. Default calls=1.

  Added nytprofcalls command to process the call event stream to
    generate timings for distinct call stacks (experimental).

  Added Flame Graph visualization SVG using the call stack data.

  Changed blocks=N option to be 0 (disabled) by default.

  Fixed test for perl 5.17+ hash randomization.
  Fixed nytprofhtml for Windows thanks to Jan Dubois. PR#2
  Fixed assorted nits thanks to Steve Peters. PR#1
  Deprecated nytprofcsv - speak up if you use it!
  No longer warn about $&, $` and $' being slow if $] >= 5.017008.

=head2 Changes in Devel::NYTProf 4.25 - 6th Feb 2013

  Fix u2time clock (ie Time::HiRes, used by Windows)

=head2 Changes in Devel::NYTProf 4.24 - 3rd Feb 2013

  Clarify sigexit option docs.
  Loosen test timing constraints (for slow cpantester VMs).
