@@ -2008,7 +2008,8 @@ incr_sub_inclusive_time(pTHX_ subr_entry_t *subr_entry)
     time_of_day_t sub_end_time;
     long ticks, overflow;
 
-    if (subr_entry->called_subnam_sv == &PL_sv_undef) {
+    /* an undef SV is a special marker used by subr_entry_setup */
+    if (subr_entry->called_subnam_sv && !SvOK(subr_entry->called_subnam_sv)) {
         if (trace_level)
             logwarn("Don't know name of called sub, assuming xsub/builtin exited via an exception (which isn't handled yet)\n");
         subr_entry->already_counted++;
@@ -2352,7 +2353,14 @@ subr_entry_setup(pTHX_ COP *prev_cop, subr_entry_t *clone_subr_entry, OPCODE op_
             }
         }
         else {
-            subr_entry->called_subnam_sv = newSV(0); /* see incr_sub_inclusive_time */
+            /* resolve_sub_to_cv couldn't work out what's being called,
+             * possibly because it's something that'll cause pp_entersub to croak
+             * anyway.  So we mark the subr_entry in a particular way and hope that
+             * pp_subcall_profiler() can fill in the details.
+             * If there is an exception then we'll wind up in incr_sub_inclusive_time
+             * which will see this mark and ignore the call.
+             */
+            subr_entry->called_subnam_sv = newSV(0);
         }
         subr_entry->called_is_xs = NULL; /* work it out later */
     }
@@ -2939,6 +2947,7 @@ disable_profile(pTHX)
 static void
 finish_profile(pTHX)
 {
+    /* can be called after the perl interp is destroyed, via libcexit */
     int saved_errno = errno;
 #ifdef MULTIPLICITY
     if (orig_my_perl && my_perl != orig_my_perl)
@@ -2966,7 +2975,11 @@ finish_profile(pTHX)
     }
 
     /* reset sub profiler data  */
-    hv_clear(sub_callers_hv);
+    if (HvKEYS(sub_callers_hv)) {
+        /* HvKEYS check avoids hv_clear() if interp has been destroyed RT#86548 */
+        hv_clear(sub_callers_hv);
+    }
+
     /* reset other state */
     cumulative_overhead_ticks = 0;
     cumulative_subr_ticks = 0;
@@ -2978,6 +2991,7 @@ finish_profile(pTHX)
 static void
 finish_profile_nocontext()
 {
+    /* can be called after the perl interp is destroyed, via libcexit */
     dTHX;
     finish_profile(aTHX);
 }
