@@ -4,6 +4,13 @@ Changes - History of significant changes in Devel::NYTProf
 
 =cut
 
+=head2 Changes in Devel::NYTProf 5.05 - 2nd July 2013
+
+  Fixed crash on "Can't use string as a subroutine ref" error,
+    and probably other die-at-pp_entersub cases,
+    with thanks to Zefram. RT#86638
+  Fixed crash with libcexit=1, thanks to Zefram. RT#86548
+
 =head2 Changes in Devel::NYTProf 5.04 - 20th June 2013
 
   Allow negative times in tests for systems with unstable clocks
